fix: adjust avatar button size for better responsiveness on smaller screens

--- a/src/app/layouts/navbar/navbar.component.scss
+++ b/src/app/layouts/navbar/navbar.component.scss
@@ -55,7 +55,7 @@
 .avatar-button {
 	display: flex;
 	align-items: left;
-	margin-right: 24px;
+
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
@@ -72,4 +72,11 @@
 	border-radius: 50%;
 	padding-right: 4px;
 	background-color: #f0f0f0;
+}
+
+@media screen and (max-width: 844px) {
+	.avatar-button {
+		width: 15px;
+		height: 15px;
+	}
 }
